release: v0.3.0 34-jar tree-zero round-trip
Decompile, tree-recompile, repackage and -Xverify:all now pass on 34
libraries (original 8 + jackson/okhttp/collections4/netty/log4j/protobuf
+ twenty typical jars). 18,759 flattened units clean, syntax = 0,
algorithm round-trip 14/14. Update README, BENCHMARK, changelog and the
landing site for the release.